<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/join_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/join_edt_email"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/join_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/join_edt_password"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/join_edt_passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/join_edt_passwordConfirm"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/join_edt_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/join_edt_nickname"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
	
        <Button
            android:id="@+id/join_btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_btn_reset" />

        <Button
            android:id="@+id/join_btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_btn_join" />
    </LinearLayout>

</LinearLayout>
