<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/readbook_txt_Guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readbook_guide" />

    <EditText
        android:id="@+id/readbook_edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/readbook_edt_title"
        android:ems="10" >
    </EditText>

    <EditText
        android:id="@+id/readbook_edt_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/readbook_edt_author"
        android:ems="10"/>

    <Button
        android:id="@+id/readbook_btn_startRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readbook_btn_startRead" />
</LinearLayout>